# rust_api

./: Cargo.toml  sqlite.db  sqlite.db-shm  sqlite.db-wal  test.py
migrations/: 20230920111300_users.sql  20230925063015_users1.sql  20230927111306_pictures.sql  20230928063822_users.sql  20230929095928_blob.sql  20231002055206_file_table.sql  20231002065041_delete_columns.sql
src/: handler.rs  main.rs  model.rs  response.rs  routes.rs  swagger.rs
src/Middleware/: auth.rs  mime_check.rs  mod.rs
src/Responses/: response.rs
src/db/: database.rs
src/handlers/: author_handler.rs  mod.rs  posts_handler.rs  user_handlers.rs  ws_handler.rs
src/models/: authors.rs  mod.rs  posts.rs  response.rs  user.rs  web_socket.rs
src/routes/: author_routes.rs  mod.rs  posts_routes.rs  user_routes.rs  ws_routes.rs
src/ws/: clients.rs  mod.rs  ws_handler.rs
