[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
parking_lot = "0.10.0"
pretty_env_logger = "0.4.0"
chrono = { version = "0.4.23", features = ["serde"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"]}
sha2 = "0.9"
hex = "0.4"
jsonwebtoken = "=7.2"