[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
base64 = "0.21.4"
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3", default-features = false }
bytes = "1.0"
worker = "0.0.18"
rand = "0.8"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
parking_lot = "0.10.0"
pretty_env_logger = "0.4.0"
chrono = { version = "0.4.23", features = ["serde"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"]}
sha2 = "0.9"
hex = "0.4"
jsonwebtoken = "=7.2"