[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
tokio-stream = "0.1.6"
base64 = "0.21.4"
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3", default-features = false }
bytes = "1.0"
worker = "0.0.18"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
chrono = { version = "0.4.23", features = ["serde"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"]}
sha2 = "0.9"
hex = "0.4"
jsonwebtoken = "=7.2"
serde_json = "1.0"
utoipa = { version="3.0.1" }
utoipa-swagger-ui = { version="3.1.5" }